tests/ui/discord-frontend/command_macro/expected_literal_4.stderr
error: expected literal
  --> tests/ui/discord-frontend/command_macro/expected_literal_4.rs:32:20
   |
LL |     command_type = core,
   |                    ^^^^

error: aborting due to 1 previous error

